Add filter value error code

--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -660,6 +660,9 @@
   <data name="sort_order_invalid" xml:space="preserve">
     <value>Die Sortierreihenfolge ist ungültig</value>
   </data>
+  <data name="filter_value_invalid" xml:space="preserve">
+    <value>Der Filter-Wert ist ungültig</value>
+  </data>
   <data name="error_title" xml:space="preserve">
     <value>Unerwarteter Fehler</value>
   </data>
