--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -660,6 +660,9 @@
   <data name="sort_order_invalid" xml:space="preserve">
     <value>The sort order is invalid</value>
   </data>
+  <data name="filter_value_invalid" xml:space="preserve">
+    <value>The filter value is invalid</value>
+  </data>
   <data name="error_title" xml:space="preserve">
     <value>Unexpected error</value>
   </data>
