Add expiry date to user account

--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -123,6 +123,9 @@
   <data name="account_locked_out" xml:space="preserve">
     <value>You have entered a wrong password for too many times. The user account has been locked for 15 minutes due to security reasons</value>
   </data>
+  <data name="account_expired" xml:space="preserve">
+    <value>Unfortunately, your user account has expired. Please contact us if you want to extend the validity of your user account</value>
+  </data>
   <data name="api_credentials_missing" xml:space="preserve">
     <value>The API credentials are missing</value>
   </data>
