--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -123,6 +123,9 @@
   <data name="account_locked_out" xml:space="preserve">
     <value>Sie haben das Passwort zu oft falsch eingegeben. Das Benutzerkonto wurde aus Sicherheitsgründen für 15 Minuten gesperrt</value>
   </data>
+  <data name="account_expired" xml:space="preserve">
+    <value>Ihr Benutzerkonto ist leider abgelaufen. Bitte kontaktieren Sie uns, wenn Sie die Gültigkeit Ihres Benutzerkontos verlängern möchten</value>
+  </data>
   <data name="api_credentials_missing" xml:space="preserve">
     <value>Die API-Anmeldeinformationen fehlen</value>
   </data>
