--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -441,6 +441,9 @@
   <data name="ie11_and_lower_not_supported" xml:space="preserve">
     <value>Microsoft hat die offizielle Unterstützung des Internet Explorer 11 und ältere Generationen von Internet Explorer eingestellt. Aus Sicherheitsgründen funktioniert diese Seite deshalb nur noch mit dem Microsoft Edge Browser</value>
   </data>
+  <data name="maintenance_mode" xml:space="preserve">
+    <value>Wir führen im Moment eine geplante Systemwartung durch. Bitte versuchen Sie es in einigen Stunden noch einmal</value>
+  </data>
   <data name="organization_invalid" xml:space="preserve">
     <value>Der Firmenname ist ungültig</value>
   </data>
