--- a/HCore-Identity/Resources/Messages.de.resx
+++ b/HCore-Identity/Resources/Messages.de.resx
@@ -285,6 +285,9 @@
   <data name="notification_culture" xml:space="preserve">
     <value>Sprache für Benachrichtigungen</value>
   </data>
+  <data name="proprietary_data" xml:space="preserve">
+    <value>Anwendungsspezifische Daten</value>
+  </data>
   <data name="currency" xml:space="preserve">
     <value>Währung</value>
   </data>
