--- a/HCore-Identity/Resources/Messages.resx
+++ b/HCore-Identity/Resources/Messages.resx
@@ -285,6 +285,9 @@
   <data name="notification_culture" xml:space="preserve">
     <value>Notification language</value>
   </data>
+  <data name="proprietary_data" xml:space="preserve">
+    <value>Application specific data</value>
+  </data>
   <data name="currency" xml:space="preserve">
     <value>Currency</value>
   </data>
